--- a/src/me/hellobug/ClassDemo/ClassDemo.html
+++ b/src/me/hellobug/ClassDemo/ClassDemo.html
@@ -7,74 +7,62 @@
 <body>
 <script src="../jasClass.js"></script>
 <script>
-(function(){
-    var Package = me.hellobug.Package;
-
-    // 父类
-    Package("demo.myclasses").Class("Person")(function(name){
+// 父类
+Package("demo.myclasses")
+.Class("Person")(function(Person, Super){
+    Person.Constructor = function(name){
         this.name = name;
-
-        var Person = demo.myclasses.Person;
-        if(!Person._protoed){
-            Person._protoed = true;
-            var proto = Person.prototype;
-            proto.getName = function(){
-                return this.name;
-            };
-            proto.sayHi = function(){
-                alert("Hi, I'm " + this.name);
-            };
-        }
-    });
-
-    // 子类
-    Package("demo.myclasses").Class("User").Extends("demo.myclasses.Person")(function(name, password){
-        this.Super(name);
+    };
+    Person.getName = function(){
+        return this.name;
+    };
+    Person.sayHi = function(){
+        alert("Hi, I'm " + this.name);
+    };
+});
+// 子类
+Package("demo.myclasses")
+.Class("User")
+.Extends("demo.myclasses.Person")(function(User, Super){
+    User.Constructor = function(name, password){
+        Super.Constructor.call(this, name);
         this.password = password;
+    };
+    User.getPassword = function(){
+        return this.password;
+    };
+});
 
-        var User = demo.myclasses.User;
-        if(!User._protoed){
-            User._protoed = true;
-            var proto = User.prototype;
-            proto.getPassword = function(){
-                return this.password;
-            };
-        }
-    });
-
-    // 孙类
-    Package("demo.myclasses").Class("Vip").Extends("demo.myclasses.User")(function(name, password, level){
-        this.Super(name, password);
+// 孙类
+Package("demo.myclasses")
+.Class("Vip")
+.Extends("demo.myclasses.User")(function(Vip, Super){
+    Vip.Constructor = function(name, password, level){
+        Super.Constructor.call(this, name, password);
         this.level = level;
+    };
+    Vip.getLevel = function(){
+        return this.level;
+    };
+    Vip.sayHi = function(){
+        Super.sayHi.call(this);
+        alert("My vip level is " + this.level);
+    };
+});
 
-        var Vip = demo.myclasses.Vip;
-        if(!Vip._protoed){
-            Vip._protoed = true;
-            var proto = Vip.prototype;
-            proto.getLevel = function(){
-                return this.level;
-            };
-            proto.sayHi = function(){
-                this.Super();
-                alert("My vip level is " + this.level);
-            };
-        }
-    });
-
-    var Person = demo.myclasses.Person,
-        User = demo.myclasses.User,
-        Vip = demo.myclasses.Vip;
-    var zhangsan = new demo.myclasses.User("张三", "123456"),
-        lisi = new Vip("李四", "222222", "8");
-    // alert(zhangsan.getPassword());
-    lisi.sayHi();
-    // alert(lisi instanceof Vip);
-    // alert(lisi instanceof Person);
-    // alert(lisi.constructor === Vip);
-    // alert(lisi.constructor === Person);
-    // alert(lisi);
-    // alert(Vip.prototype);
-})();
+var Person = demo.myclasses.Person,
+    User = demo.myclasses.User,
+    Vip = demo.myclasses.Vip;
+var zhangsan = new User("张三", "123456"),
+    lisi = new Vip("李四", "222222", "8");
+// alert(zhangsan.getPassword());
+lisi.sayHi();
+// alert(lisi instanceof Vip);
+// alert(lisi instanceof Person);
+// alert(lisi.constructor === Vip);
+// alert(lisi.constructor === Person);
+// alert(lisi);
+// console.log(Vip.prototype);
 </script>
 </body>
 </html>
